tests/bad/const_expr_unsupported.oc
/// fail: Unsupported operator in constant expression

const foo = "Hello"
const bar = &foo